deploy: 34c881bcf5cbf6cc19a822e4a3c32962fa55181c

--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-<!doctype html><title>Page title</title><p>Hi</p>
+<!doctype html>
+<html lang="">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>
+      
+    </title>
+    <meta name="description" content="" />
+    <script>document.documentElement.classList.add('js')</script>
+
+    <link rel="stylesheet" href="/public/styles/main.css" />
+  </head>
+
+  <body>
+    <a href="#main" class="visually-hidden">Skip to main content</a>
+
+    <header>
+  <nav>
+    <ul>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Graphics</a></li>
+      <li><a href="#">Writings</a></li>
+      <li><a href="#">Reviews &amp; Interviews</a></li>
+      <li><a href="#">Merch</a></li>
+    </ul>
+  </nav>
+</header>
+
+    <main id="main">
+      
+<div class="home">
+  <h1>Fly-Ø Art</h1>
+<p><img src="public/images/reduced_dumster_diving.gif" alt="A punk jumping into a dumpster"></p>
+
+</div>
+
+    </main>
+  </body>
+
+  <script src="/public/scripts/site.js"></script>
+</html>
