deploy: 57cabced113b5d4a5df24934deed8121267d0d19

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="" />
     <script>document.documentElement.classList.add('js')</script>
 
-    <link rel="stylesheet" href="/public/styles/main.css" />
+    <link rel="stylesheet" href="public/styles/main.css" />
   </head>
 
   <body>
@@ -39,5 +39,5 @@
     </main>
   </body>
 
-  <script src="/public/scripts/site.js"></script>
+  <script src="public/scripts/site.js"></script>
 </html>
