deploy: f1865a18fc2b4b7b6725e4b46dd4095da08ac526

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html lang="">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>
       
     </title>
-    <meta name="description" content="" />
+    <meta name="description" content="">
     <script>document.documentElement.classList.add('js')</script>
 
-    <link rel="stylesheet" href="public/styles/main.css" />
+    <link rel="stylesheet" href="styles/main.css">
   </head>
 
   <body>
@@ -32,12 +32,12 @@
       
 <div class="home">
   <h1>Fly-Ø Art</h1>
-<p><img src="public/images/reduced_dumster_diving.gif" alt="A punk jumping into a dumpster"></p>
+<p><img src="images/reduced_dumster_diving.gif" alt="A punk jumping into a dumpster"></p>
 
 </div>
 
     </main>
   </body>
 
-  <script src="public/scripts/site.js"></script>
+  <script src="scripts/site.js"></script>
 </html>
