--- a/writing/index.html
+++ b/writing/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>
-      Fly-0 Art
+      Writings | Fly-0 Art
     </title>
     <meta name="description" content="Fly has lived and squatted in the lower east side  NYC since 1990. She has done comics and illustrations for World War III, NYPress, the Village Voice, Bikini, and other publications.">
     <script>document.documentElement.classList.add('js')</script>
@@ -32,15 +32,7 @@
 
 
     <main id="main">
-      
-<article class="article">
-  
-<div class="home">
-  <h1>Fly-Ø Art</h1>
-
-</div>
-
-</article>
+      <p>TODO</p>
 
     </main>
   </body>
